fix: use custom scroll to fix page transition flickering

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#__next {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
 a,
 button {
   -webkit-tap-highlight-color: transparent;
